<resources>
    <string name="app_name">BookSyndy</string>
    <string name="india_country_code">+91</string>
    <string name="student">Student</string>
    <string name="parent">Parent/guardian of a student</string>
    <string name="i_am_a">I am a:</string>
    <string name="enter_otp">Please enter the 6-digit OTP we sent to your mobile number</string>
    <string name="to_buy">Find used books</string>
    <string name="to_sell">Sell / give away books</string>
    <string name="im_here_to">I\'m here to:</string>
    <string name="cbse">CBSE</string>
    <string name="icse">ICSE/ISC</string>
    <string name="ib">IB</string>
    <string name="igcse">IGCSE/CAIE</string>
    <string name="state_board">State Board</string>
    <string name="board_question">Which board do you study under?</string>
    <string name="b_tech">B. Tech</string>
    <string name="b_sc">B. Sc</string>
    <string name="b_com">B. Com</string>
    <string name="ba">BA</string>
    <string name="b_ed">B. Ed</string>
    <string name="bba">BBA</string>
    <string name="bca">BCA</string>
    <string name="llb">LLB</string>
    <string name="mbbs">MBBS</string>
    <string name="degree_question">What are you currently studying?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Phone Number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_mylistings">Your Listings</string>
    <string name="menu_slideshow">Chats</string>
    <string name="menu_tools">Bookmarks</string>
    <string name="menu_share">Help and FAQs</string>
    <string name="menu_share_app">Share</string>
    <string name="menu_send">Sign Out</string>
    <string name="action_signOut">Sign out</string>
    <string name="main_activity">This is Main Activity</string>
    <string name="starred">Starred</string>
    <string name="my_listings">Your listings</string>
    <string name="settings">Settings</string>
    <string name="get_started">Let\'s get started!</string>
    <string name="book_desc_q">What best describes what you\'re here to put up?</string>
    <string name="title_question">What\'s the title of your book?</string>
    <string name="a_detailed_name">A detailed name</string>
    <string name="textbook_naming_instructions">Make the title as clear and comprehensive as possible. Try to include the author\'s and the publisher\'s names.</string>
    <string name="notes_name_question">What material is this?</string>
    <string name="othermaterial_naming_instructions">Make the title as clear and comprehensive as possible. Try to include the author\'s and the publisher\'s names.\n\nSince what you\'re putting up isn\'t a published textbook, make sure the name you enter adequately describes it.</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="description">Description</string>
    <string name="description_req">Please provide a brief description.</string>
    <string name="desc_desc">Mention all relevant details, like the condition of the book/material, here.</string>
    <string name="notes_grade_question">Which grade is this material for?</string>
    <string name="my_chats">Chats</string>
    <string name="home">Home</string>
    <string name="comp_exam_interest">I\'m interested in competitive exam prep</string>
    <string name="book_for_free_q">Do you feel generous today?</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="book_pricing_instructions">Keep the price nominal and as low as possible. Do keep in mind the condition of your book and its original price.</string>
    <string name="which_degree_book">Which degree is this book for?</string>
    <string name="which_degree_material">Which degree is this material for?</string>
    <string name="std_rates">Standard SMS rates may apply</string>
    <string name="enter_loc">Enter your location manually:</string>
    <string name="material_board_q">Which educational board is this material for?</string>
    <string name="material_pricing_instructions">Keep the price nominal and as low as possible. Do keep in mind the condition of your material and its original price, if any.</string>
    <string name="book_reqs">Requests</string>
    <string name="search_on_maps">Search on Maps</string>
    <string name="getting_loc">Search for your location</string>
    <string name="grade_choosing_instructions">If you just completed a grade, choose the option that corresponds to the one you just completed and not the one you will be entering.\n\nIf you\'re a college student, choose \'Undergraduate\' and you will later be asked for your year.</string>
    <string name="divider_bullet">•</string>
    <string name="chat_empty_1">No chats found.</string>
    <string name="chat_empty_2">It\'s lonely here.</string>
    <string name="display_username">Display username</string>
    <string name="last_seen">Last Seen</string>
    <string name="title_activity_chat">Chat Activity</string>
    <string name="name_question">What\'s your name?</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="free_only">Free only</string>
    <string name="sort_by">Sort by</string>
    <string name="relevance">Relevance</string>
    <string name="date_newest_first">Date (newest first)</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pic_q">To get started, please upload a picture of your book.</string>
    <string name="type">Type</string>
    <string name="textbook">Textbook</string>
    <string name="notes">Notes / material</string>
    <string name="for_comp_exams">This material is for competitive exams</string>
    <string name="competitive_exams">Competitive exams</string>
    <string name="first_name">First name</string>
    <string name="help">Help and FAQs</string>
    <string name="places_api_key">AIzaSyDFv-Pb57N1LSzVR213kB2M5n8arDzX4Hs</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="book_cat_eg">Eg. Class 12, CBSE (or) Undergraduate, B. tech (or) Competitive exams</string>
    <string name="mark_as_sold">Mark as sold</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="all_books">All Books</string>
    <string name="action_search">Search</string>
    <string name="filters">Filters</string>
    <string name="degree">Degree</string>
    <string name="school_filters">School filters</string>
    <string name="apply">Apply</string>
    <string name="cancel">cancel</string>
    <string name="filter_tagline">Find exactly what you\'re looking for.</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="board">Board</string>
    <string name="grade">Grade</string>
    <string name="use_guided_mode">Use guided mode to create listings</string>
    <string name="nothing_here">Nothing to show here</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="school">SCHOOL</string>
    <string name="college">COLLEGE</string>
    <string name="clear_filter">Clear filters</string>
    <string name="nearby_pending">Nearby Pending</string>
    <string name="pending">Pending</string>
    <string name="MyRequests">Your Requests</string>
    <string name="UserPref">UserPreference</string>
    <string name="p_imageurl">IMAGEURL</string>
    <string name="p_userid">USERID</string>
    <string name="p_userphone">USERPHONE</string>
    <string name="p_firstname">FNAME</string>
    <string name="p_lastname">LNAME</string>
    <string name="p_username">UNAME</string>
    <string name="p_lat">LAT</string>
    <string name="p_lng">LNG</string>
    <string name="preferGuidedMode">preferGuidedMode</string>
    <string name="phoneNumberPublic">phoneNumberPublic</string>
    <string name="preferGeneral">preferGeneral</string>
    <string name="p_grade">USERGRADE</string>
    <string name="p_board">USERBOARD</string>
    <string name="p_year">USERYEAR</string>
    <string name="p_competitive">COMPETITIVE</string>
    <string name="year">Year</string>
    <string name="p_area">AREA</string>
    <string name="p_city">CITY</string>
    <string name="p_useddon">USEDDON</string>
    <string name="p_usertype">USERTYPE</string>
    <string name="p_userhasaddr">USERHASADDR</string>
    <string name="p_userhnbn">USERHNBN</string>
    <string name="p_userstreet">USERSTREET</string>
    <string name="p_userpincode">USERPINCODE</string>
    <string name="p_uservolstatus">USERVOLSTATUS</string>
    <string name="p_volradiusPref">VOLRADIUSPREF</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Find the books you need</string>
    <string name="slide_1_desc">Explore a vast library of books and material, both academic and non-academic</string>
    <string name="slide_2_title">Sell or give away your old books</string>
    <string name="slide_2_desc">Free up space and fund your next book as you do so</string>
    <string name="slide_3_title">Connect</string>
    <string name="slide_3_desc">Join a network of readers and students across the country</string>
    <string name="play_again">Play Again</string>
    <string name="save">Save</string>
    <string name="report_user">Report user</string>
    <string name="report_listing">Report listing</string>
    <string name="type_a_message">Type a message</string>
    <string name="type_textbook">Textbook / published material</string>
    <string name="type_notes">Notes / any other material</string>
    <string name="title">Title</string>
    <string name="by">By</string>
    <string name="delete_chat">Delete chat</string>
    <string name="incorrect_code_t1">Oops, we faced an issue with verification. Please restart the app and contact the developer if the issue persists.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">New Message</string>
    <string name="report_request">Report request</string>
    <string name="no_sms_q">Didn\'t get an SMS? </string>
    <string name="other">Other</string>
    <string name="ChatPref">CHATPREFERENCE</string>
    <string name="edit_profile">Edit profile</string>
    <string name="parent_grade_q">Which grade is your child studying in?</string>
    <string name="g5b">Grade 5 or below</string>
    <string name="g68">Grade 6 to 8</string>
    <string name="g9">Grade 9</string>
    <string name="g10">Grade 10</string>
    <string name="g12">Grade 12</string>
    <string name="g11">Grade 11</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="reset">Reset</string>
    <string name="chats">Chats</string>
    <string name="phone_number">Phone number</string>
    <string name="teacher">Teacher</string>
    <string name="vendor_b_l">Vendor / bookstore / library</string>
    <string name="vendor">Vendor</string>
    <string name="which_grade_teacher">Which grade do you teach? Select one.</string>
    <string name="about_feedback">We value your feedback. If you\'d like to tell us how we can improve our app, or where we\'re going wrong or simply what you think of the app, this is the place. Enter your feedback below. We\'ll get back to you if needed.</string>
</resources>