<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollegeFilterActivity">

    <TextView
        android:id="@+id/filterQuestionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="Find exactly what you're looking for."
        android:textColor="@color/colorTextBlack"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/degreeLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterQuestionTV">

        <LinearLayout
            android:id="@+id/degreeLL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/degreeFilterLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Degree" />

            <CheckBox
                android:id="@+id/filterBtech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_tech" />

            <CheckBox
                android:id="@+id/filterBsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_sc" />

            <CheckBox
                android:id="@+id/filterBcom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_com" />

            <CheckBox
                android:id="@+id/filterBa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ba" />

            <CheckBox
                android:id="@+id/filterBba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bba" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/degreeLL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/gradeFilterLL"
            app:layout_constraintTop_toBottomOf="@+id/filterQuestionTV">


            <TextView
                android:id="@+id/boardFilterLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="" />

            <CheckBox
                android:id="@+id/filterBca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bca" />

            <CheckBox
                android:id="@+id/filterBed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_ed" />

            <CheckBox
                android:id="@+id/filterLlb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/llb" />

            <CheckBox
                android:id="@+id/filterMbbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mbbs" />

            <CheckBox
                android:id="@+id/filterOtherDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Other" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/freeFilterLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degreeLL">

        <TextView
            android:id="@+id/priceFilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Price" />

        <CheckBox
            android:id="@+id/freeOnlyCB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:text="@string/free_only" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freeFilterLL">

        <TextView
            android:id="@+id/sortByLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by" />

        <!--The selection of this radiogroup should be set to relevance by default and should not be saved as a pref-->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/relevanceSortRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/relevance" />

            <RadioButton
                android:id="@+id/dateSortRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/date_newest_first" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/degreeLL">

        <TextView
            android:id="@+id/typeFilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/type" />

        <CheckBox
            android:id="@+id/filterTextbook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textbook" />

        <CheckBox
            android:id="@+id/filterNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>