<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetCollegeSpecificsActivity">


    <RadioGroup
        android:id="@+id/degreesButtonList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="24dp">

        <RadioButton
            android:id="@+id/btech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_tech"
            android:fontFamily="@font/roboto_light"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/bsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_sc"
            android:fontFamily="@font/roboto_light"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/bcom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_com"
            android:fontFamily="@font/roboto_light"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/ba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/ba"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/bba"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_light"
            android:layout_height="wrap_content"
            android:text="@string/bba"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/bca"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_light"
            android:layout_height="wrap_content"
            android:text="@string/bca"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/bed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_ed"
            android:fontFamily="@font/roboto_light"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/llb"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_light"
            android:layout_height="wrap_content"
            android:text="@string/llb"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/mbbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbbs"
            android:fontFamily="@font/roboto_light"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/degreeQuestionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/degree_question"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="22sp"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintBottom_toTopOf="@+id/degreesButtonList"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_navigate_next_24px"/>

</androidx.constraintlayout.widget.ConstraintLayout>