<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open_chats"
        android:icon="@drawable/ic_chat_white_24px"
        android:orderInCategory="102"
        android:title="@string/chats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_24px"
        android:orderInCategory="101"
        android:title="@string/filters"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24px"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>
